update styles and mounting

--- a/shop/cart/public/index.html
+++ b/shop/cart/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="cart-root"></div>
+    <div id="cart-dev-root"></div>
   </body>
 </html>
