--- a/shop/host/public/index.html
+++ b/shop/host/public/index.html
@@ -24,27 +24,41 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border-bottom: 1px solid grey;
+        background-color: #ff7171;
+        color: rgb(60, 33, 33);
       }
       .title {
         text-align: center;
         margin: 0;
       }
       .component-title {
-        font-size: 18px;
+        font-size: 24px;
         font-weight: 600;
-      }
-      .content {
-        padding: 0 30px;
+        color: rgb(60, 33, 33);
       }
       .listing {
         flex: 1;
-        border-right: 1px solid grey;
-        padding: 30px;
+        padding: 0 30px;
+        background-color: #fae3d9;
+        color: rgb(60, 33, 33);
+      }
+      .products {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 10px;
+      }
+      .product {
+        background-color: rgb(95, 79, 79);
+        padding: 15px;
+        min-height: 100px;
+        color: white;
       }
       .cart {
         flex-basis: 200px;
-        padding: 30px;
+        padding: 0 30px;
+        background-color: #ffb6b9;
+
+        color: rgb(60, 33, 33);
       }
     </style>
   </head>
@@ -55,11 +69,11 @@
     </header>
 
     <div id="listing-root" class="listing">
-      <p class="component-title">Products list - remote-1</p>
+      <p class="component-title">Products list: remote 1</p>
     </div>
 
     <div id="cart-root" class="cart">
-      <p class="component-title">Cart - remote-2</p>
+      <p class="component-title">Cart: remote 2</p>
     </div>
   </body>
 </html>
