--- a/shop/listing/public/index.html
+++ b/shop/listing/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="listing-root"></div>
+    <div id="listing-dev-root" class="products"></div>
   </body>
 </html>
