--- a/shop/host/public/index.html
+++ b/shop/host/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
+    <!-- TODO: move out remote specific styles to the corresponding apps  -->
     <style>
       * {
         box-sizing: border-box;
