--- a/platform/orders/public/index.html
+++ b/platform/orders/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style></style>
   </head>
   <body>
-    <div id="_marketing-local-root"></div>
+    <div id="products-local-root" class="flex h-full"></div>
   </body>
 </html>
