--- a/platform/host/public/index.html
+++ b/platform/host/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-comm Internal Platform</title>
   </head>
-  <body>
-    <div id="root"></div>
-    <div id="cms-root"></div>
+  <body class="h-full">
+    <div id="root" class="h-full"></div>
+    <div id="cms-root" class="h-full"></div>
   </body>
 </html>
