style and other fixes

--- a/platform/cms/public/index.html
+++ b/platform/cms/public/index.html
@@ -8,6 +8,6 @@
     <style></style>
   </head>
   <body>
-    <div id="products-local-root" class="flex h-full"></div>
+    <div id="products-local-root" class="h-full"></div>
   </body>
 </html>
