--- a/platform/cms/public/index.html
+++ b/platform/cms/public/index.html
@@ -4,7 +4,7 @@
     <base href="/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CMS 1.1.0</title>
     <style></style>
   </head>
   <body>
