--- a/platform/auth/public/index.html
+++ b/platform/auth/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CMS 1.1.1</title>
+    <title>Auth 1.0.0</title>
     <style></style>
   </head>
   <body>
-    <div id="cms-local-root" class="h-full"></div>
+    <div id="auth-local-root" class="h-full"></div>
   </body>
 </html>
